<resources>
    <string name="app_name">LaureApp</string>
    <string name="email" translatable="false">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or register</string>
    <string name="btn_login" translatable="false">LOGIN</string>
    <string name="btn_signup">SIGNUP</string>
    <string name="btn_link_to_register">Not a member? Get registered now!</string>
    <string name="btn_link_to_login">Already registered. Let me login</string>
    <string name="btn_sign_out" translatable="false">Logout</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="password" translatable="false">Password</string>
    <string name="username" translatable="false">Username</string>
    <string name="role_label">Choose a role</string>
    <string name="role_error">Choose a valid role</string>
    <string name="birth_date">Birth Date</string>
    <string name="city">City</string>
    <string name="address">Address</string>
    <string name="telephone">Telephone</string>
    <string-array name="roles">
        <item>Student</item>
        <item>Professor</item>
        <item>Admin</item>
    </string-array>
    <string name="login_progress">Login in Progress for </string>
    <string name="session_recover">Session recovered successful.</string>
    <string name="btn_logout">LogOut</string>
    <string name="logOutSuccess">Logged out successfully.</string>
    <string name="welcome_message">Welcome, </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>

    <!-- TODO: Remove or change this placeholder text -->
</resources>